# aquamarine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/shaders/: line.glsl  pick.glsl  solid.glsl
src/: main.cpp
src/app/: app.cpp  app.h
src/camera/: orbit_camera.cpp  orbit_camera.h
src/math/: math.h
src/platform/: glfw_system.cpp  glfw_system.h  imgui_context_guard.cpp  imgui_context_guard.h  input.cpp  input.h  platform.cpp  platform.h  window.h
src/render/: geometry_gen.cpp  geometry_gen.h  line_mesh.cpp  line_mesh.h  line_program.cpp  line_program.h  mesh.cpp  mesh.h  mesh_program.cpp  mesh_program.h  picker.cpp  picker.h  renderer.cpp  renderer.h  shader_utils.cpp  shader_utils.h  vertex.h
